# E-commerce_API

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
cart/: serializers.py  service.py  tests.py  urls.py  views.py
config/: asgi.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py
dashboard/: urls.py
dashboard/serializers/: __init__.py  report_serializer.py
dashboard/service/: __init__.py  generate_csv_report.py  summary.py
dashboard/tests/: __init__.py  activate_product.py  report.py  summary.py
dashboard/views/: __init__.py  activate_product.py  archive.py  generate_report.py  summary.py
inventory/: admin.py  apps.py  services.py  signals.py  urls.py
inventory/migrations/: 0001_initial.py  0002_alter_product_is_active.py  0003_remove_product_picture_productimage.py
inventory/models/: __init__.py  category.py  product.py  product_image.py  rating.py
inventory/serializers/: __init__.py  image.py  rating.py
inventory/tests/: test_category.py  test_product_create.py  test_product_list.py  test_product_rating.py  test_product_retrieve.py  test_product_search.py  test_product_update_delete.py  test_product_vendor_list.py
nginx/: nginx.conf
notifications/: admin.py  urls.py  utils.py
order/: urls.py
payment/: urls.py
services/: __init__.py  email.py  payment.py  stripe.py  stripe_connect.py
users/: admin.py  forms.py  permissions.py  signals.py  test_user_api.py  urls.py
wallet/: admin.py  service.py  urls.py
(+140 files in other folders)
