[project]
name = "e-commerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.2",
    "django>=6.0.2",
    "django-celery-results>=2.6.0",
    "django-filter>=25.2",
    "django-polymorphic>=4.10.5",
    "django-redis>=6.0.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "psycopg[binary]>=3.3.2",
    "pycountry>=24.6.1",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
]
